tests/failing/2-generic_lambda_generic_type_mismatch/main.af
str: @str

receiver: <T>(T)
foo: <T>(x: T, ok:receiver<T>){
    ok(x)
}
bar: (x: str){
    @write(x, @exit(0))
}
main: () {
    foo(42, bar)
}
